<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="Search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_menu"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu"
        android:title="Opciones">

        <menu>
            <item android:id="@+id/users"
                android:title="@string/users" />
            <item android:id="@+id/server"
                android:title="@string/server" />
            <item android:id="@+id/summary"
                android:title="@string/sumary" />
            <item android:id="@+id/close"
                android:title="@string/logout" />
        </menu>

    </item>
</menu>