<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.dg.sigco.card.view.fragment.DownloadFragment">

    <LinearLayout
        android:id="@+id/downloadLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_marginTop="@dimen/bottombar_height"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:weightSum="1"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_big_download"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Descargar tarjetas"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="35dp"
                android:textColor="@color/colorPrimaryText"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/subtitleDownload"
                android:fontFamily="sans-serif"
                android:textSize="24dp"
                android:textColor="@color/colorPrimaryText"
                />

            <RelativeLayout
                android:id="@+id/progressLayout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:indeterminate="false"
                    android:max="48"
                    android:progress="1"
                    android:progressDrawable="@drawable/progress_circle"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Descargando..."
                    android:id="@+id/textView"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <Button
                android:id="@+id/downloadCards"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/downloadCard"
                android:theme="@style/RaisedButtonDark"
                android:fontFamily="sans-serif-black"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/successLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="@dimen/bottombar_height"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:weightSum="1"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_big_success"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Descarga exitosa"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="35dp"
                android:textColor="@color/colorPrimaryText"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/subtitleSuccess"
                android:fontFamily="sans-serif"
                android:textSize="24dp"
                android:textColor="@color/colorPrimaryText"
                />

            <Button
                android:id="@+id/goCardsList"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviewCards"
                android:theme="@style/RaisedButtonDark"
                android:fontFamily="sans-serif-black"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/withoutCardsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="@dimen/bottombar_height"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:weightSum="1"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_big_no_cards"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No hay tarjetas"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="35dp"
                android:textColor="@color/colorPrimaryText"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/witoutCards"
                android:fontFamily="sans-serif"
                android:textSize="24dp"
                android:textColor="@color/colorPrimaryText"
                />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>